2014-06-17  Rene Liebscher <R.Liebscher@gmx.de>

	* avrftdi_private.h: added missing msg level for avrdude_message 
                             in E/E_VOID macros

2014-06-17  Rene Liebscher <R.Liebscher@gmx.de>

	Removing exit calls from config parser
	* config.h: cleanup, left only internally needed definitions
	* config.c: removed exit calls, use yyerror and yywarning
	* config_gram.y: (Dito.)
	* lexer.l: (Dito.)
	* libavrdude.h: removed internal definitions of config parser
	* main.c: removed yyerror, it is now in config.c
	* jtagmkII.c: added missing free in error case
	* pgm.c: replaced exits by returns
	* pickit2.c: add missing return

2014-06-13  Axel Wachtler <axel@uracoli.de>
	
        start removing global "verbose" variable, for avrdude library.
        * arduino.c: added verbose level in avrdude_message()
	* avr910.c: (Dito.)
	* avr.c: (Dito.)
	* avrdude.h: (Dito.)
	* avrftdi.c: (Dito.)
	* avrpart.c: (Dito.)
	* bitbang.c: (Dito.)
	* buspirate.c: (Dito.)
	* butterfly.c: (Dito.)
	* config.c: (Dito.)
	* config_gram.y: (Dito.)
	* dfu.c: (Dito.)
	* fileio.c: (Dito.)
	* flip1.c: (Dito.)
	* flip2.c: (Dito.)
	* ft245r.c: (Dito.)
	* jtag3.c: (Dito.)
	* jtagmkI.c: (Dito.)
	* jtagmkII.c: (Dito.)
	* lexer.l: (Dito.)
	* libavrdude.h: (Dito.)
	* linuxgpio.c: (Dito.)
	* main.c: (Dito.)
	* par.c: (Dito.)
	* pgm.c: (Dito.)
	* pickit2.c: (Dito.)
	* pindefs.c: (Dito.)
	* ppi.c: (Dito.)
	* ppiwin.c: (Dito.)
	* safemode.c: (Dito.)
	* ser_avrdoper.c: (Dito.)
	* serbb_posix.c: (Dito.)
	* serbb_win32.c: (Dito.)
	* ser_posix.c: (Dito.)
	* ser_win32.c: (Dito.)
	* stk500.c: (Dito.)
	* stk500generic.c: (Dito.)
	* stk500v2.c: (Dito.)
	* term.c: (Dito.)
	* update.c: (Dito.)
	* usbasp.c: (Dito.)
	* usb_libusb.c: (Dito.)
	* usbtiny.c: (Dito.)
	* wiring.c: (Dito.)

2014-06-11  Rene Liebscher <R.Liebscher@gmx.de>

	bug #42516 spelling-error-in-binary
	* stk500v2.c, avrftdi.c, usbasp.c: fixed spelling errors

2014-06-01  Rene Liebscher <R.Liebscher@gmx.de>
